# readfaker

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  rust_build.yml
src/: cli.rs  generator.rs  lib.rs  main.rs  utils.rs
src/distributions/: length.rs  mod.rs  quality.rs
src/io/: bam.rs  fasta.rs  fastq.rs  mod.rs
src/models/: error.rs  length.rs  mod.rs  quality.rs
