[package]
name = "readfaker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bgzip = { version = "0.3.1", features = ["zlib-ng"] }
clap = { version = "4.5.50", features = ["derive"] }
console = "0.16.1"
needletail = "0.6.3"
rand = "0.9.2"
uuid = { version = "1.18.1", features = ["v4"] }

[features]
default = []
