[package]
name = "readfaker"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
console = "0.16.1"
flate2 = {version = "1.1.5", features = ["zlib-rs"]}
noodles = { version = "0.103.0", features = ["fasta", "fastq", "bgzf", "bam", "sam"] }
rand = "0.9.2"
uuid = { version = "1.19.0", features = ["v4"] }

[features]
default = []

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev.package."*"]
opt-level = 2
